--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 120px 80px;
 
     img{
@@ -20,13 +21,13 @@
     strong{
       font: 700 36px 'Poppins', sans-serif;
       line-height: 42px;
-      margin-top: 16px;
+      margin-top: 25px;
     }
 
     p{
       font-size: 24px;
       line-height: 32px;
-      margin-top: 16px;
+      margin-top: 18px;
       color: #f8f8f8;
     }
   }
@@ -48,6 +49,8 @@
 
     > img {
       align-self: center;
+      width: 120px;
+      height: 120px;
     }
 
     h2 {
