--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -18,6 +18,12 @@
       margin-top: 8px;
     }
 
+    &.outlined {
+      background: #fff;
+      border: 1px solid #835afd;
+      color: #835afd;
+    }
+
     &:not(:disabled):hover{
       filter: brightness(0.9);
     }
