--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -4,13 +4,13 @@
   overflow: hidden;
  
   background: #FFF;
-  border: 1px solid #835afd;
+  border: 1px solid #e559f9;
   cursor: pointer;
 
   display: flex;
 
   div{
-    background: #835afd;
+    background: #e559f9;
     padding: 10px 12px;
     display: flex;
     justify-content: center;
